# pracaInz_2021

./: .clang-format  CMakeLists.txt  README.md  service_for_autostart.txt  test
documentation/: config
documentation/html/: BeagleBoneBlack_8h.html  BeagleBoneBlack_8h_source.html  acquisitor_8c.html  acquisitor_8h.html  acquisitor_8h_source.html  annotated.html  cicFilter_8c.html  cicFilter_8h.html  cicFilter_8h_source.html  classes.html  configurator_8c.html  configurator_8h.html  configurator_8h_source.html  dir_328b968c35ac7c7f7576c36378b876f4.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_8681a82a265081a91d191144ff606af9.html  dir_a9905913a22eda44e4c8ef7651a7303c.html  dir_c8e2e18b2819f10c7958ce29e03ac6ef.html  dir_f855cd1749e901f58634957bc935d1ef.html  fileManager_8c.html  fileManager_8h.html  fileManager_8h_source.html  files.html  globals.html  globals_func.html  globals_type.html  gpioManager_8c.html  gpioManager_8h.html  gpioManager_8h_source.html  index.html  main_8c.html  menudata.js  structAcquisitor__Files__Info__s-members.html  structAcquisitor__Files__Info__s.html  structfileManager__Data__s-members.html  structfileManager__Data__s.html
src/: BeagleBoneBlack.h  acquisitor.c  acquisitor.h  configurator.c  configurator.h  fileManager.c  fileManager.h  fileSave.c  fileSave.h  main.c  mainpage.md
src/acquisitor/: acquisitor.c  acquisitor.h
src/configurator/: configurator.c  configurator.h
src/fileManager/: BeagleBoneBlack.h  fileManager.c  fileManager.h
src/filter/: cicFilter.c  cicFilter.h
src/gpio/: gpioManager.c  gpioManager.h
(+21 files in other folders)
